# gcs-share

./: .dockerignore  Dockerfile  Makefile
be/: pyproject.toml
be/be/: __main__.py  server.py  utils.py
fe/: package-lock.json  package.json  tsconfig.json  vite.config.ts
fe/src/: App.tsx
